--- a/randomnum/index.html
+++ b/randomnum/index.html
@@ -2,7 +2,7 @@
     <head>
     <title>Random Number</title>
         <link rel="stylesheet" href="index.css"/>
-        <link rel="stylesheet" href="index.js"/>
+        <script src="index.js"></script>
     </head>
 <body>
 
