--- a/randomnum/index.html
+++ b/randomnum/index.html
@@ -3,6 +3,7 @@
     <title>Random Number</title>
         <link rel="stylesheet" href="index.css"/>
         <script src="index.js"></script>
+        <link rel="icon" href="https://krishlala.github.io/Chatbot/WhitehatJr/Avatar.png">
     </head>
 <body>
 
